--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "path": "^0.12.7",
     "tree": "^0.1.3"
   }
