--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "picnicjs",
-  "version": "1.0.0",
-  "description": "Modern JS plugin-based web app.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "version": "0.0.1",
+  "description": "LLM-discord API interface.",
+  "packageManager": "yarn@4.9.2",
   "dependencies": {
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "node-fetch": "^2.7.0",
-    "nvm": "^0.0.4",
-    "path": "^0.12.7",
-    "tree": "^0.1.3"
+    "fs": "^0.0.1-security",
+    "node": "^22.16.0",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7"
+  },
+  "scripts": {
+    "dev-main": "tsx watch --env-file='./.env.dev' ./main.ts --watch-path='./**/*.ts ./*.ts'",
+    "dev-serv": "tsx watch --env-file='./.env.dev' ./server.ts",
+    "dev": "yarn dev-main && yarn dev-serv",
+    "start": "tsx --env-file='./.env.prod' ./server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["AI", "LLM", "discord", "bot"],
+  "author": "Spore,Xanazf",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.2",
+    "@types/node": "^22.15.29",
+    "discord-api-types": "^0.38.11",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
