--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
-    "node": "^22.16.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   },
@@ -19,7 +18,12 @@
     "start": "tsx --env-file='./.env.prod' ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["AI", "LLM", "discord", "bot"],
+  "keywords": [
+    "AI",
+    "LLM",
+    "discord",
+    "bot"
+  ],
   "author": "Spore,Xanazf",
   "license": "MIT",
   "devDependencies": {
