--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "start": "tsx --env-file='./.env.prod' ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["AI", "LLM", "discord", "bot"],
+  "keywords": [
+    "AI",
+    "LLM",
+    "discord",
+    "bot"
+  ],
   "author": "Spore,Xanazf",
   "license": "MIT",
   "devDependencies": {
