--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "astro": "^5.9.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.8",
     "@types/gh-pages": "^6",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^4.1.8"
   }
 }
